Remove block padding from `code` on IRC layout to avoid its area from being covered each other

--- a/res/css/_sc/views/rooms/_IRClayout.pcss
+++ b/res/css/_sc/views/rooms/_IRClayout.pcss
@@ -62,6 +62,14 @@ limitations under the License.
                 }
             }
 
+            .mx_EventTile_content {
+                .markdown-body {
+                    code:not(pre *) {
+                        padding-block: 0; /* Remove block padding to avoid line height overflow */
+                    }
+                }
+            }
+
             @mixin sc_DisambiguatedProfile;
             @mixin sc_ReplyTile;
         }
